New Crowdin updates (#122 & #123)

--- a/res/values-es-rES/evolution_strings.xml
+++ b/res/values-es-rES/evolution_strings.xml
@@ -48,7 +48,7 @@
     <string name="swipe_to_screenshot_gesture_summary">Deslizar tres dedos para hacer captura de pantalla</string>
     <!-- Adaptive Playback -->
     <string name="adaptive_playback_screen_title">Pausa Inteligente</string>
-    <string name="adaptive_playback_enabled">Usar Pausa Inteligente</string>
+    <string name="adaptive_playback_master_switch_title">Usar Pausa Inteligente</string>
     <string name="adaptive_playback_disabled_summary">Desactivado</string>
     <string name="adaptive_playback_intro_text">Pausa automáticamente los medios cuando el volumen está silenciado y se reanudará automáticamente cuando el volumen sea restaurado dentro del tiempo establecido.</string>
     <string name="adaptive_playback_timeout_title">Usar un tiempo de espera de</string>
@@ -431,7 +431,7 @@
     <!-- Smart charging -->
     <string name="smart_charging_title">Carga inteligente</string>
     <string name="smart_charging_summary">Establecer nivel máximo de carga</string>
-    <string name="smart_charging_switch_title">Usar carga inteligente</string>
+    <string name="smart_charging_master_switch_title">Usar Carga Inteligente</string>
     <string name="smart_charging_level_title">Nivel de detención</string>
     <string name="smart_charging_resume_level_title">Nivel de inicio</string>
     <string name="smart_charging_reset_stats_title">Reiniciar las estadísticas de la batería</string>
